--- a/EatFast/EatFast/EatFast.csproj
+++ b/EatFast/EatFast/EatFast.csproj
@@ -98,6 +98,9 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="FoodMenuPage.xaml.cs">
+      <DependentUpon>FoodMenuPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Helpers\DelegateCommand.cs" />
     <Compile Include="LocationsPage.xaml.cs">
       <DependentUpon>LocationsPage.xaml</DependentUpon>
@@ -121,6 +124,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Design\download.jpg" />
+    <Content Include="Design\images %283%29.jpg" />
+    <Content Include="Design\IMG_1420.jpg" />
     <Content Include="Design\main_background.jpg" />
     <Content Include="Design\meal.jpg" />
     <Content Include="Properties\Default.rd.xml" />
@@ -137,6 +142,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Page Include="FoodMenuPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="LocationsPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
