--- a/EatFast/EatFast/EatFast.csproj
+++ b/EatFast/EatFast/EatFast.csproj
@@ -142,6 +142,7 @@
     <Compile Include="ViewModels\IContentViewModel.cs" />
     <Compile Include="ViewModels\MainMenuViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\Model.cs" />
     <Compile Include="ViewModels\SettingsPanelViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
