--- a/EatFast-Server/package.json
+++ b/EatFast-Server/package.json
@@ -10,10 +10,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.14.2",
     "cors": "^2.7.1",
     "express": "^4.13.3",
+    "express-session": "^1.12.1",
+    "http-status": "^0.2.0",
     "mongoose": "^4.3.1",
-    "morgan": "^1.6.1"
+    "morgan": "^1.6.1",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0"
   }
 }
