--- a/EatFast/EatFast/Teamer.csproj
+++ b/EatFast/EatFast/Teamer.csproj
@@ -110,6 +110,9 @@
     <Compile Include="Pages\CurrentTask.xaml.cs">
       <DependentUpon>CurrentTask.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Pages\LiderPage.xaml.cs">
+      <DependentUpon>LiderPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Pages\LocationsPage.xaml.cs">
       <DependentUpon>LocationsPage.xaml</DependentUpon>
     </Compile>
@@ -168,6 +171,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Pages\CurrentTask.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Pages\LiderPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
