--- a/EatFast/EatFast/Teamer.csproj
+++ b/EatFast/EatFast/Teamer.csproj
@@ -102,13 +102,12 @@
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Managers\IManager.cs" />
+    <Compile Include="Managers\IUserManager.cs" />
     <Compile Include="Models\Organisation.cs" />
     <Compile Include="Models\Project.cs" />
     <Compile Include="Models\Team.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Models\UserAuthenticateModel.cs" />
-    <Compile Include="Repository\IRepository.cs" />
     <Compile Include="Managers\UserManager.cs" />
     <Compile Include="Pages\AccountPage.xaml.cs">
       <DependentUpon>AccountPage.xaml</DependentUpon>
@@ -122,7 +121,6 @@
     <Compile Include="Pages\LocationsPage.xaml.cs">
       <DependentUpon>LocationsPage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Repository\UsersRepository.cs" />
     <Compile Include="Pages\MainTaskPage.xaml.cs">
       <DependentUpon>MainTaskPage.xaml</DependentUpon>
     </Compile>
