--- a/EatFast/EatFast/Teamer.csproj
+++ b/EatFast/EatFast/Teamer.csproj
@@ -103,6 +103,7 @@
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Managers\IUserManager.cs" />
+    <Compile Include="Managers\OrganisationManager.cs" />
     <Compile Include="Models\Organisation.cs" />
     <Compile Include="Models\Project.cs" />
     <Compile Include="Models\Team.cs" />
@@ -153,12 +154,14 @@
     <Compile Include="ViewModels\IContentViewModel.cs" />
     <Compile Include="ViewModels\IPageViewModel.cs" />
     <Compile Include="ViewModels\Converters\OrganisationNameConverter.cs" />
+    <Compile Include="ViewModels\OrganisationViewModel.cs" />
     <Compile Include="ViewModels\PageViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\SettingsPanelViewModel.cs" />
     <Compile Include="ViewModels\UserAccountViewModel.cs" />
     <Compile Include="ViewModels\UserAuthenticateViewModel.cs" />
     <Compile Include="ViewModels\UserSummaryViewModel.cs" />
+    <Compile Include="ViewModels\ViewModelBase.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
