--- a/EatFast/EatFast/Teamer.csproj
+++ b/EatFast/EatFast/Teamer.csproj
@@ -104,11 +104,14 @@
     </Compile>
     <Compile Include="Managers\IUserManager.cs" />
     <Compile Include="Managers\OrganisationManager.cs" />
+    <Compile Include="Managers\ProjectManager.cs" />
     <Compile Include="Models\Organisation.cs" />
     <Compile Include="Models\Project.cs" />
     <Compile Include="Models\Team.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Models\UserAuthenticateModel.cs" />
+    <Compile Include="Notifications\INotifier.cs" />
+    <Compile Include="Notifications\Notifier.cs" />
     <Compile Include="Pages\CreateMainProjectPage.xaml.cs">
       <DependentUpon>CreateMainProjectPage.xaml</DependentUpon>
     </Compile>
@@ -119,8 +122,8 @@
     <Compile Include="Pages\CreateOrganizationPage.xaml.cs">
       <DependentUpon>CreateOrganizationPage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Pages\CurrentTask.xaml.cs">
-      <DependentUpon>CurrentTask.xaml</DependentUpon>
+    <Compile Include="Pages\CurrentProject.xaml.cs">
+      <DependentUpon>CurrentProject.xaml</DependentUpon>
     </Compile>
     <Compile Include="Pages\LiderPage.xaml.cs">
       <DependentUpon>LiderPage.xaml</DependentUpon>
@@ -160,7 +163,6 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\ProjectViewModel.cs" />
     <Compile Include="ViewModels\SettingsPanelViewModel.cs" />
-    <Compile Include="ViewModels\TaskViewModel.cs" />
     <Compile Include="ViewModels\UserAccountViewModel.cs" />
     <Compile Include="ViewModels\UserAuthenticateViewModel.cs" />
     <Compile Include="ViewModels\UserSummaryViewModel.cs" />
@@ -204,7 +206,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Pages\CurrentTask.xaml">
+    <Page Include="Pages\CurrentProject.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
